having weird bug on image get cropped

--- a/client/sass/index.scss
+++ b/client/sass/index.scss
@@ -52,7 +52,6 @@ $susy: (
 
 .infoBox {
 	@include span(4 of 12 last);
-	display: none;
 	background-color: $black_3;
 }
 
